commissioners race updated

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -124,23 +124,24 @@
               <h6 class="page-title">Larae Smith</h6>
               <p>          
 
-                LaRae Smith is a community-focused leader with a background in education, faith-based outreach, and public service in Commercial Township. She has served on the local Board 
-                of Education, chaired the township’s Land Use Board and Democratic Committee, and has been recognized for her advocacy on economic development and family-oriented programming.
-                In prior campaigns and interviews, Smith emphasized bringing a working-class voice to the table, strengthening youth outreach through faith-based partnerships, and 
-                ensuring smaller municipalities have a seat in county-level decision-making.
+                LaRae Smith is a long-time Cumberland County resident and community-focused leader with a strong background in education, faith-based outreach, and public service. She has 
+                served on the Commercial Township Board of Education, chaired the township’s Land Use Board and Democratic Committee, and received recognition for her work in economic 
+                development, youth engagement, and family-centered programming.
                 <br>
                 <br>
-                However, Smith’s current campaign is not visible to the public. Her previous website is no longer active, and there have been no updates to her policy platform or clear 
-                communication about her current goals for the county. Despite past efforts to connect with voters and elevate underserved communities, there is no accessible messaging or 
-                material available for the 2025 race.
+                Her current 2025 campaign is now beginning to take shape. Smith has released a detailed agenda outlining her priorities—such as transparent governance, expanded services for 
+                families and veterans, public transportation, and homelessness intervention—and she has agreed to a long-form interview to further clarify her views and proposals. This 
+                renewed effort marks a positive shift from earlier in the campaign cycle, when her platform was not publicly visible.
                 <br>
                 <br>
-                At this point, voters can only reference past interviews and public forums, which may not fully represent her current priorities or positions.
+                While her campaign is gaining traction, there are still notable gaps in the broader Democratic Party infrastructure that limit voter access to candidate information. 
+                The county party website has no public event listings for any Democratic candidates—endorsed or otherwise—which makes it harder for residents to attend events, ask questions, 
+                or stay informed. Smith is not responsible for this issue, but like all candidates, she’s affected by it.
                 <br>
                 <br>
-                It’s also worth noting that although this is technically a primary race, two seats are open and only three Democrats are running—meaning there is a decent chance Smith will advance
-                to the general election. In that context, voters would reasonably expect the candidates to offer more robust platforms, direct comparisons to 
-                their likely opponents, and clear messaging on well-known county issues.
+                Still, she stands out for taking recent initiative. With a compelling background and increasing public engagement, Smith is positioned to make her case to voters—especially in 
+                a primary where only three Democrats are running for two open seats. Continued visibility and follow-through will be key, but her current trajectory is a step in the right 
+                direction.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -157,36 +158,30 @@
               <h6 class="page-title">Larae Smith</h6>
               <p>          
 
-                LaRae Smith is no newcomer to public service. She’s served on the Commercial Township Board of Education, chairs both the township’s Democratic Committee and Land Use Board, 
-                and has experience in community education, faith-based outreach, and economic development. Her previous campaigns and interviews revealed a passionate advocate for small-town 
-                representation, youth engagement, and the importance of faith-based community support structures.
+                LaRae Smith has recently taken meaningful steps to improve transparency in her 2025 campaign. After an initial stretch of limited visibility, she has now released a detailed 
+                platform outlining her agenda, background, and campaign message. Most notably, she has agreed to participate in a long-form interview—scheduled for Monday—that will give 
+                voters a chance to hear her views directly and in context. These are all positive developments and reflect a clear willingness to engage.
                 <br>
                 <br>
-                Which makes it all the more surprising that there is no accessible campaign messaging available for her current 2025 race. Her campaign website from a prior run is no longer 
-                active, no updated policy positions have been released, and she has not responded to outreach for participation in this year’s election coverage. Without a new campaign site, 
-                recent interviews, or public events, voters have no way of knowing whether her current run builds upon her previous campaign promises or diverges from them.
+                Given her deep background in local leadership—including service on the Commercial Township Board of Education, the township’s Democratic Committee and Land Use Board, and 
+                various roles in education, outreach, and faith-based service—Smith enters the race with both relevant experience and grassroots credibility. Her past messaging emphasized 
+                community involvement and accessible leadership, and she now appears to be reactivating that voice for 2025.
                 <br>
                 <br>
-                Smith’s past messaging emphasized the importance of transparency, showing up for community conversations, and bringing a working-class voice to leadership. She has spoken 
-                compellingly in forums and interviews about using faith-based programs to address youth development, crime prevention, and poverty. But without a 2025 campaign update, it’s 
-                difficult to assess whether these priorities still drive her platform.
+                However, some structural gaps remain—not just in her individual campaign, but within the broader Democratic Party’s local infrastructure. The county Democratic website 
+                continues to list “TBD” under its events page, offering no updates or listings for either endorsed or non-endorsed candidates. This leaves voters without an easy way to find 
+                town halls, forums, or campaign stops. While it may seem reasonable that non-endorsed candidates like Smith wouldn’t appear on the site, the complete absence of public events 
+                for any candidate reflects a systemic failure to meet modern transparency standards.
                 <br>
                 <br>
-                It’s especially important for candidates with prior grassroots momentum to maintain visibility and follow-through. Smith previously earned significant voter support from a 
-                small municipality, showing she can mobilize a local base. But continuing that momentum in 2025 requires clear communication—especially in an election where other candidates 
-                are just a few miles away and still not presenting coherent public messaging.
+                Smith’s current campaign isn't responsible for the party’s shortcomings—but she is still affected by them. In an election season where other candidates across the board are 
+                struggling to centralize their messaging and event schedules, it’s important to highlight those who are making the effort. Smith is doing that now. She’s not fully caught 
+                up—but she’s clearly on the move.
                 <br>
                 <br>
-                That said, this rating can easily improve. All candidates, including Smith, are encouraged to raise their transparency score by completing a public questionnaire, publishing 
-                a simple website or platform summary, or participating in an interview. The point isn’t to spotlight individuals—it’s to centralize and share information voters deserve to 
-                have.
-                <br>
-                <br>
-                If candidates truly believe in community engagement, then informing that community should be the baseline, not the afterthought. In 2025, the burden should not fall on voters 
-                to guess where their local leaders stand.
-                <br>
-                <br>
-                For these reasons, LaRae Smith currently receives a very low rating for transparency and accessibility.
+                For these reasons, LaRae Smith’s rating is raised to Moderate. With a successful interview and continued direct outreach, she has the potential to become one of the more 
+                transparent and accessible candidates in the race. But as always, the goal of this site is to keep the focus where it belongs: on making public information easier to find, 
+                share, and trust. In 2025, that should be the baseline—not the exception.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -245,10 +240,10 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Very Low</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Moderate</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
             
@@ -257,13 +252,13 @@
         <h4 class="sub-heading">Agenda and Campaign Message</h4>
         
             <div class="experience can-sec">
+                <p>(Copy/pasted directly from correspondence with Larae)</p>
+                <br>
                 <p>As a Cumberland County resident for over 40 years, I understand the unique challenges and needs that face our communities. I also know that many people feel they 
                     have been ignored. Each person is important and deserves a representative that will support and fight for them during these uncertain times.</p>
                     <br>
-                    <br>
                 <p>We have a lot of work to do to win back the trust and confidence of our residents. I am ready to do the work needed to rebuild that trust by listening to what our 
                     voters say they need and expect from their representatives.</p>
-                    <br>
                     <br>
                 <h3>A – Transparent Government</h3>
                 <br>
@@ -320,19 +315,21 @@
                 <h3>Education</h3>
                     <br>
                     <ul>
-                        <li><strong>Bridgeton High School, Bridgeton, NJ</strong> – Graduate
+                        <li><strong>Bridgeton High School, Bridgeton, NJ – Graduate</strong> 
                         <ul>
                             <li>1986 Class President</li>
                             <li>National Honor Society Member</li>
                             <li>Varsity in Field Hockey, Baseball, Track and Field</li>
                         </ul>
                         </li>
+                        <br>
                         <li><strong>Stockton University, Stockton, NJ</strong>
                         <ul>
                             <li>Bachelor’s Degree in Business and Marketing</li>
                             <li>Currently pursuing Master’s Degree in Education</li>
                         </ul>
                         </li>
+                        <br>
                         <li><strong>Atlantic Cape Community College</strong>
                         <ul>
                             <li>Self-Employment and UD Certified Counselor</li>
