--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -122,22 +122,28 @@
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">County Commissioner</h6>
 
-          <p>
-          Two seats are open on the Cumberland County Commissioners Board. The two republican incumbents, Commissioner Albrecht and Commissioner Lods, are running unopposed in the 
-          republican primary. While there is general campaign information on the Cumberland County Regular Republican site and some specifics come up from time to time at the 
-          bi-weekly republican breakfasts, there are a lot more specifics regarding known issues in the county that ought to be talked about directly. We have reached out to both 
-          candidates and Albrecht plans on corresponding, yet we have not received anything after months of waiting. 
-          <br>
-          <br>
-          On the democrat side, three candidates are competing for two seats. John Capizola is a former commissioner who was appointed to his seat mid-term. Yolanda Balicki is a 
-          thoroughly credentialed immigration lawyer. Larae Smith is a known political figure in the community who has run for office multiple times in recent years. One would think 
-          they would have a vested interest in making their cases clear to the public, yet we have received no response from our efforts to make contact.
-          <br>
-          <br>
-          As the Democrat primary approaches, time is quickly slipping away for candidates to make their case to the public. Meanwhile, Republican candidates still have ample time before 
-          the general election to engage with voters. But regardless of the timeline, the kind of basic information we’ve been seeking—positions on issues, general agendas, and 
-          comparisons to their well known opponents—should already be available. After two years of repeated attempts to gather this information and foster cooperation, we’ve learned not to 
-          expect a lot. Simply put: we’re not holding our breath for a sudden outbreak of transparency.
+            Two seats are open on the Cumberland County Board of Commissioners. On the Republican side, incumbents Doug Albrecht and Victoria Lods are running unopposed in the primary. 
+            While both benefit from the built-in visibility of the bi-weekly Republican breakfast meetings, broader campaign messaging remains sparse. Commissioner Albrecht has 
+            expressed interest in doing an interview and invited us to appear on his radio show this coming Monday. However, he has not yet confirmed that invitation via email—an 
+            important detail, especially as that time slot now directly conflicts with a scheduled interview with Democratic candidate LaRae Smith. Commissioner Lods, for her part, 
+            has not responded to any outreach attempts. 
+            <br>
+            <br>
+            On the Democratic side, three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are competing for two available spots. Capizola, a former appointee to the Board, 
+            and Balicki, a respected immigration attorney, have both indicated they plan to complete a public questionnaire and participate in an interview. However, neither has 
+            followed through at this time. In contrast, LaRae Smith has released a detailed campaign platform and scheduled a podcast-style interview, reflecting a significant 
+            step forward in transparency and voter outreach. 
+            <br>
+            <br>
+            Unfortunately, the local Democratic Party infrastructure continues to hinder public engagement. The county party’s website still lists no events—neither for endorsed 
+            candidates nor for the rest of the field—making it difficult for residents to find or attend campaign events. This absence not only affects unaffiliated candidates like 
+            Smith, but also makes it harder for endorsed candidates to demonstrate public accessibility. In 2025, this kind of organizational lapse remains a barrier to meaningful 
+            civic participation. 
+            <br>
+            <br>
+            With the primary fast approaching, Democratic candidates are running out of time to connect with voters. Republican candidates, while unopposed for now, should not take 
+            their general election runway for granted. Regardless of party, voters deserve clear agendas, stances on well-known county issues, and an opportunity to compare candidates 
+            beyond party labels. After years of outreach and documentation, we’ve learned to track progress where it exists—and keep asking questions where it doesn’t.
           <br>
           <br>
           Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
