kranjac town hall added

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -152,6 +152,25 @@
 
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Mario Kranjac Town Hall, Somer's Point</strong></li>
+                    <li class="description">Meet Republican Primary Gubernatorial Candidate Mario Kranjac</li>
+                    <li class="date-and-time">05/10/25 - 9:30am</li>
+                    <li class="location">Sal's Coal Fired Pizza, 501 New Rd., Somers Point, NJ 08244</li>
+                </ul>
+            </div>  
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Josh Gottheimer Meet n Greet, Double Eagle Saloon</strong></li>
+                    <li class="description">Meet Democrat Primary Gubernatorial Candidate Josh Gottheimer</li>
+                    <li class="date-and-time">05/20/25 - 7:30pm</li>
+                    <li class="location">Double Eagle Saloon, 1477 Panther Rd, Vineland NJ, 08361</li>
+                    <li class="RSVP">RSVP: <a href="https://mobilize.us/s/Ecw996"> Mobilize.us</a></li>
+                </ul>
+            </div>  
+
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>CCRRO Meet n Greet Cedarville Committee Incumbent John Tisa and General Assembly incumbent Antwan McClellan , Cedarville Fire Hall</strong></li>
                     <li class="description">Meet candidates John Tisa and Antwan McClellan</li>
                     <li class="date-and-time">05/21/25 - 4:00pm</li>
@@ -181,15 +200,7 @@
 
             
 
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Josh Gottheimer Meet n Greet, Double Eagle Saloon</strong></li>
-                    <li class="description">Meet Democrat Primary Gubernatorial Candidate Josh Gottheimer</li>
-                    <li class="date-and-time">05/20/25 - 7:30pm</li>
-                    <li class="location">Double Eagle Saloon, 1477 Panther Rd, Vineland NJ, 08361</li>
-                    <li class="RSVP">RSVP: <a href="https://mobilize.us/s/Ecw996"> Mobilize.us</a></li>
-                </ul>
-            </div>  
+            
 
             <div class="event-card">
                 <ul class="event-info">
