--- a/child_pages/cc-elections/Candidates/kranjac.html
+++ b/child_pages/cc-elections/Candidates/kranjac.html
@@ -181,21 +181,10 @@
 
      <div class="event-card">
         <ul class="event-info">
-            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-            <li class="date-and-time">04/26/25 - 8:30am</li>
-            <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-        </ul>
-    </div>    
-
-    <div class="event-card">
-        <ul class="event-info">
-            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-            <li class="date-and-time">05/10/25 - 8:30am</li>
-            <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ, 08361</li>
-            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+            <li class="name"><strong>Mario Kranjac Town Hall, Somer's Point</strong></li>
+            <li class="description">Meet Republican Primary Gubernatorial Candidate Mario Kranjac</li>
+            <li class="date-and-time">05/10/25 - 9:30am</li>
+            <li class="location">Sal's Coal Fired Pizza, 501 New Rd., Somers Point, NJ 08244</li>
         </ul>
     </div>  
 
