what does a governor do section filled in

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -162,40 +162,55 @@
 
     <div id="sample-ballot">
 
-        <h4 class="sub-heading-ballot">What does a Governor do?</h4>
-        <!-- dropdown content of job description-->
-        <div class="job-description can-sec">
+        <h4 class="sub-heading-ballot" style="text-align:center;">What does a Governor do?</h4>
+<!-- dropdown content of job description-->
+<div class="job-description can-sec">
 
-            Description:
-            <br>
-            <br>
+    Description: The Governor of New Jersey is the head of the executive branch of the state government. As the state’s top elected official, the Governor plays a crucial role in 
+    setting policy direction, overseeing state departments, managing the budget, and implementing laws passed by the legislature. The Governor represents all New Jersey residents 
+    and holds significant influence over both daily governance and long-term planning.
+    <br>
+    <br>
 
-            <details>
-                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
-                Point 1
-                <br>
-                <br>
-                Point 2
-                <br>
-                <br>
-                Point 3
-                <br>
-                <br>
-                Point 4
-                <br>
-                <br>
-                Point 5
-                <br>
-                <br>
-                Point 6
-                <br>
-                <br>
-                Point 7
-            </details>
-        </div>
+    <details>
+        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+        <strong>Executive Leadership:</strong><br>
+        The Governor oversees the operation of all executive agencies and departments in the state, including those responsible for health, education, transportation, law enforcement, 
+        and social services. The Governor appoints department heads and sets administrative priorities to guide how laws are carried out across New Jersey.
+        <br><br>
+
+        <strong>State Budget Authority:</strong><br>
+        The Governor is responsible for proposing the annual state budget, which outlines how taxpayer dollars will be spent. This includes funding for public schools, infrastructure 
+        projects, public safety, healthcare, and local aid. The legislature must approve the budget, but the Governor’s proposal serves as the starting point and primary vision.
+        <br><br>
+
+        <strong>Bill Signing and Veto Power:</strong><br>
+        Once the legislature passes a bill, the Governor can either sign it into law or veto it. The Governor also has the ability to issue a conditional veto—returning a bill to 
+        the legislature with recommended changes. This power makes the Governor a key player in shaping legislation.
+        <br><br>
+
+        <strong>Emergency Management and Crisis Response:</strong><br>
+        In times of natural disaster, public health emergencies, or civil unrest, the Governor has broad powers to declare states of emergency, mobilize resources, and issue 
+        executive orders that affect residents statewide.
+        <br><br>
+
+        <strong>Appointments and Judicial Influence:</strong><br>
+        The Governor appoints judges—including justices to the New Jersey Supreme Court (with Senate approval)—as well as members of boards, commissions, and various 
+        regulatory agencies. These appointments shape how laws are interpreted and enforced for years to come.
+        <br><br>
+
+        <strong>Public Advocacy and Agenda Setting:</strong><br>
+        Through speeches, executive orders, and policy proposals, the Governor sets the policy agenda and works to persuade the public and legislature to support major initiatives.
+        <br><br>
+
+        <strong>Statewide Representation:</strong><br>
+        The Governor represents New Jersey in dealings with other states and the federal government, and acts as the face of the state during major events and emergencies.
+    </details>
+</div>
 
         <button class="quick-summary-reopen">quick election summary</button>
 
+        <br>
         <br>
 
         <div class="candidate-spectrum" style="font-family: sans-serif; max-width: 700px; margin: auto;">
@@ -233,7 +248,7 @@
               <details style="margin-bottom: 20px;">
                 <summary style="font-weight: bold; cursor: pointer; background-color: #9ae6b4; padding: 6px;">Mikie Sherrill – <em>Disciplined Operator</em></summary>
                 <ul>
-                  <li>🇺🇸 Former Navy pilot and U.S. Attorney; current Congresswoman</li>
+                  <li>🇺🇸 Former Navy pilot and Assistant U.S. Attorney; current Congresswoman</li>
                   <li>⚖️ Governance Style: Federalist, procedural, institution-trusting</li>
                   <li>🗣️ Tone: Polished, cautious</li>
                   <br>
@@ -245,7 +260,7 @@
               <details style="margin-bottom: 20px;">
                 <summary style="font-weight: bold; cursor: pointer; background-color: #f6ad55; padding: 6px;">Sean Spiller – <em>Union-Focused Populist</em></summary>
                 <ul>
-                  <li>🏫 NJEA President and Montclair Mayor</li>
+                  <li>🏫 NJEA President and former Montclair Mayor</li>
                   <li>🛠️ Governance Style: Public-sector progressive, union-first policymaker</li>
                   <li>🗣️ Tone: Passionate, activist-leaning</li>
                   <br>
@@ -280,10 +295,10 @@
             </details>
           </div>
 
-        <a href="../cc-elections/governor_experience_chart.html"
+        <!-- <a href="../cc-elections/governor_experience_chart.html"
                 style="display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
                 Candidate Background and Experience Chart
-        </a>
+        </a> -->
 
         <br>
 
