took out vineland form line

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -850,7 +850,7 @@
                     </div><!-- end of republcian candidates-->
                 </details>
                        
-            <div class="end-text">Form 14 - Vineland W6 D-4</div>
+            <!-- <div class="end-text">Form 14 - Vineland W6 D-4</div> -->
     </div> <!-- end of sample ballot -->
 
 </body>
