design changes on governors page again

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -177,7 +177,7 @@
     <h4 class="sub-heading-ballot" style="text-align:center;">What does a Governor do?</h4>
 
     <details>
-        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+        <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
 
         General Description: The Governor of New Jersey is the head of the executive branch of the state government. As the state’s top elected official, the Governor plays a crucial role in 
         setting policy direction, overseeing state departments, managing the budget, and implementing laws passed by the legislature. The Governor represents all New Jersey residents 
@@ -217,6 +217,8 @@
         The Governor represents New Jersey in dealings with other states and the federal government, and acts as the face of the state during major events and emergencies.
     </details>
 </div>
+
+        <br>
 
         <button class="quick-summary-reopen">quick election summary</button>
 
@@ -415,8 +417,8 @@
 
             <h3  style="text-align:center">PRIMARY ELECTION DATE: June 10th, 2025</h3>
             <br>
-            <h2>SAMPLE BALLOTS</h2>
-
+            <h2 style="text-align: center">SAMPLE BALLOTS</h2>
+            <br><br>
             <details>
                 <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline; font-weight:bold;">
                 Click or tap to view Democratic Gubernatorial Candidates
