picture test on spectrum stuff

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -370,6 +370,8 @@
 
                 <details style="margin-bottom: 20px;">
                     <summary style="font-weight: bold; cursor: pointer; background-color: #c53030; padding: 6px;">
+                    <img src="barbera.jpg" alt="Justin Barbera" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
+
                       Justin Barbera – <em>Anti-Establishment Patriot</em>
                     </summary>
                     <ul>
