spectrum picture test 2

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -369,18 +369,17 @@
                 </details>
 
                 <details style="margin-bottom: 20px;">
-                    <summary style="font-weight: bold; cursor: pointer; background-color: #c53030; padding: 6px;">
-                    <img src="barbera.jpg" alt="Justin Barbera" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
-
-                      Justin Barbera – <em>Anti-Establishment Patriot</em>
+                    <summary style="display: flex; align-items: center; font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 6px; gap: 10px; font-size: 1.05em;">
+                      <img src="barbera.jpg" alt="Justin Barbera" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
+                      <span>Justin Barbera – <em>Anti-Establishment Patriot</em></span>
                     </summary>
-                    <ul>
+                    <ul style="margin-left: 55px; margin-top: 10px;">
                       <li>🔧 Contractor and small business owner with no prior political office</li>
                       <li>🚫 Governance Style: Anti-institutional, populist, religious-nationalist framing</li>
                       <li>🗣️ Tone: Raw, faith-driven, defiant toward political elites</li>
                       <br>
                       <li>🎯 Resonates with voters seeking moral revival, outsider courage, and total system overhaul rooted in Christian and constitutional values</li>
-                      <li><a href="Candidates/barbera.html">More about Justin Barbera →</a></li>
+                      <li><a href="Candidates/barbera.html" style="color: #fbd38d;">More about Justin Barbera →</a></li>
                     </ul>
                   </details>
               
