--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -370,8 +370,9 @@
 
                 <details style="margin-bottom: 20px;">
                     <summary style="display: flex; align-items: center; font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 6px; gap: 10px; font-size: 1.05em;">
-                      <img src="barbera.jpg" alt="Justin Barbera" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
-                      <span>Justin Barbera – <em>Anti-Establishment Patriot</em></span>
+                      <span>Justin Barbera – <em>Anti-Establishment Patriot</em>
+                        <img src="barbera.jpg" alt="Justin Barbera" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
+                    </span>
                     </summary>
                     <ul style="margin-left: 55px; margin-top: 10px;">
                       <li>🔧 Contractor and small business owner with no prior political office</li>
