--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -371,7 +371,7 @@
                 <details style="margin-bottom: 20px;">
                     <summary style="display: flex; align-items: center; font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 6px; gap: 10px; font-size: 1.05em;">
                       <span>Justin Barbera – <em>Anti-Establishment Patriot</em>
-                        <img src="barbera.jpg" alt="Justin Barbera" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
+                        <img src="../../assets/candidates/barbera.jpg" alt="Justin Barbera" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
                     </span>
                     </summary>
                     <ul style="margin-left: 55px; margin-top: 10px;">
