--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -119,8 +119,8 @@
 
 
     <!-- quick summary button content-->
-    <dialog id="myModal" class="modal">
-        <!-- Modal content -->
+    <!-- <dialog id="myModal" class="modal">
+        
         <div class="modal-content">
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary</h4>
@@ -149,8 +149,31 @@
 
           </p>
         </div>
-    </dialog>
+    </dialog> -->
 
+    <div id="election-summary can-sec">
+
+        <h4 style="text-align:center;">Election Introduction - What's Basically Happening?</h4>
+
+        <details>
+            <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+            The governor's race this year is highly anticipated and has lots of competitors. To be clear, we should not be any sort of authoritative source on this race.  
+            Rather, we are going to consolidate and present the info as best as we can, but ultimately it will be up to you to sift through all the information.
+
+            <br><br>
+
+            Phil Murphy is not seeking re-election, and the Democrats have 6 people in their primary race. Generally speaking, Steve Sweeney is the most establishment-oriented guy 
+            with direct experience in state government, Josh Gottheimer and Mikie Sherrill are both moderate congresspeople, Sean Spiller is a bit of an activist teacher with 
+            experience as head of the NJEA, and Steve Fulop and Ras Baraka are current mayors who are more of the aggressive reformer types.
+
+            <br><br>
+
+            Similarly, the Republicans have 5 candidates running in their primary. Jack Ciattarelli and Jon Bramnick are the most experienced, with Bramnick having the longest 
+            legislative track record and Ciattarelli being a former Assemblyman and 2021 GOP nominee. Bill Spadea is positioning himself as the conservative outsider, leveraging 
+            his radio show background to rally grassroots support. Mario Kranjac is a former mayor who openly brands himself as a “forever Trumper,” and Justin Barbera is a 
+            contractor and grassroots candidate focused on amplifying everyday voters.
+        </details>
+    </div>
     <!-- debate videos
     
     <div class="video-box-sm">
@@ -174,7 +197,7 @@
 <!-- dropdown content of job description-->
 <div class="job-description can-sec">
 
-    <h4 class="sub-heading-ballot" style="text-align:center;">What does a Governor do?</h4>
+    <h4 style="text-align:center;">What does a Governor do?</h4>
 
     <details>
         <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
@@ -220,7 +243,7 @@
 
         <br>
 
-        <button class="quick-summary-reopen">quick election summary</button>
+        <!-- <button class="quick-summary-reopen">quick election summary</button> -->
 
         <br>
         <br>
