more gov page restyling

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -153,11 +153,13 @@
 
     <br>
     <br>
+    <br>
+    <br>
 
     <div class="election-summary can-sec">
 
-        <h4 style="text-align:center;">Election Introduction</h4>
-
+        <h2 style="text-align: center">Election Introduction</h2>
+        <br>
         <details>
             <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
             The governor's race this year is highly anticipated and has lots of competitors. To be clear, we should not be any sort of authoritative source on this race.  
@@ -200,8 +202,8 @@
 <!-- dropdown content of job description-->
 <div class="job-description can-sec">
 
-    <h4 style="text-align:center;">What does a Governor do?</h4>
-
+    <h2 style="text-align: center">What does a Governor do?</h2>
+    <br>
     <details>
         <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
 
@@ -250,7 +252,7 @@
 
     <div class="candidate-spectrums can-sec">
         
-        <h4>Candidates Spectrum - Which One Might You Prefer?</h4>
+        <h2 style="text-align: center">Candidates Spectrum - Which One Might You Prefer?</h2>
 
             <details>
               <summary style="text-align:center; font-weight: bold; font-size: 1.2em; cursor: pointer; color: #0645AD;">Democrat Candidates</summary>
@@ -450,7 +452,7 @@
         
         <div class="sample-ballots can-sec">
 
-            <h3  style="text-align:center">PRIMARY ELECTION DATE: June 10th, 2025</h3>
+            <h2  style="text-align:center">PRIMARY ELECTION DATE: June 10th, 2025</h2>
             <br>
             <h2 style="text-align: center">SAMPLE BALLOTS</h2>
             <br><br>
