gov page restyling

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -254,6 +254,8 @@
         
         <h2 style="text-align: center">Candidates Spectrum - Which One Might You Prefer?</h2>
 
+            <br>
+
             <details>
               <summary style="text-align:center; font-weight: bold; font-size: 1.2em; cursor: pointer; color: #0645AD;">Democrat Candidates</summary>
               <p style="text-align: center; font-style: italic; margin-top: 10px;">
@@ -334,7 +336,7 @@
               </details>
             </details>
 
-            <br><br>
+            <br>
 
               <details>
                 <summary style="text-align:center; font-weight: bold; font-size: 1.2em; cursor: pointer; color: red;">
@@ -458,7 +460,7 @@
             <br><br>
             <details>
                 <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline; font-weight:bold;">
-                Click or tap to view Democratic Gubernatorial Candidates
+                Democrat Ballot
                 </summary>
                     <div id="democratic-candidates">
                         <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
@@ -743,11 +745,10 @@
             </details>
 
         <br>
-        <br>
 
             <details>
                 <summary style="text-align:center; cursor:pointer; color:red; text-decoration:underline; font-weight:bold;">
-                  Click or tap to view Republican Primary Gubernatorial Candidates
+                  Republican Ballot
                 </summary>
                 <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
                 <div class="sb-top-box"> 
