--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -26,14 +26,6 @@
     gtag('config', 'G-64FQD2P8BV');
     </script>
 
-    <style>
-        summary {
-            list-style: revert;
-        }
-        summary::-webkit-details-marker {
-            display: revert;
-        }
-    </style>
 </head>
 
 <body>
@@ -400,20 +392,24 @@
                   </ul>
                 </details>
 
+                <!-- Candidate Image Above -->
+                <img src="../../assets/candidates/barbera.jpg" alt="Justin Barbera"
+                style="display: block; margin: 0 auto 10px auto; width: 70px; height: 70px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
+
+                <!-- Candidate Details Section -->
                 <details style="margin-bottom: 20px;">
-                    <summary style="display: grid; grid-template-columns: auto 1fr; align-items: center; font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 8px 12px; gap: 15px; font-size: 1.05em;">
-                      <span style="display: inline-block;">Justin Barbera – <em>Anti-Establishment Patriot</em></span>
-                      <img src="../../assets/candidates/barbera.jpg" alt="Justin Barbera" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
+                    <summary style="font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 6px;">
+                    Justin Barbera – <em>Anti-Establishment Patriot</em>
                     </summary>
-                    <ul style="margin-left: 75px; margin-top: 10px;">
-                      <li>🔧 Contractor and small business owner with no prior political office</li>
-                      <li>🚫 Governance Style: Anti-institutional, populist, religious-nationalist framing</li>
-                      <li>🗣️ Tone: Raw, faith-driven, defiant toward political elites</li>
-                      <br>
-                      <li>🎯 Resonates with voters seeking moral revival, outsider courage, and total system overhaul rooted in Christian and constitutional values</li>
-                      <li><a href="Candidates/barbera.html" style="color: #fbd38d;">More about Justin Barbera →</a></li>
+                    <ul>
+                        <li>🔧 Contractor and small business owner with no prior political office</li>
+                        <li>🚫 Governance Style: Anti-institutional, populist, religious-nationalist framing</li>
+                        <li>🗣️ Tone: Raw, faith-driven, defiant toward political elites</li>
+                        <br>
+                        <li>🎯 Resonates with voters seeking moral revival, outsider courage, and total system overhaul rooted in Christian and constitutional values</li>
+                        <li><a href="Candidates/barbera.html" style="color: red;">More about Justin Barbera →</a></li>
                     </ul>
-                  </details>
+                </details>
 
                 <!-- <details style="margin-bottom: 20px;">
                     <summary style="display: flex; align-items: center; font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 6px; gap: 10px; font-size: 1.05em;">
