--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -255,6 +255,11 @@
     <div class="candidate-spectrums can-sec">
         
         <h2 style="text-align: center">Candidates Spectrum - Which One Might You Prefer?</h2>
+        <br>
+        <p style="text-align: center">To note: The deadline for changing party affiliation has past for this primary. That means if you are registered republican, you can only 
+            vote for a republican. If you are registered as a democrat, you can only vote for a democrat. If you are unaffiliated, you can vote for either and the County Clerk's 
+            office will automatically register for the party you vote for.
+        </p>
 
             <br>
 
@@ -271,7 +276,7 @@
 
               <details style="margin-bottom: 20px;">
                 <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #276749; color: white; padding: 6px;">Steve Sweeney – <em>Status Quo Steward</em></summary>
-                <ul>
+                <ul style="text-align: center">
                   <li>✅ Deepest state-level experience (Former Senate President)</li>
                   <li>⚙️ Governance Style: Institutional, legislative, incremental</li>
                   <li>🗣️ Tone: Moderate and procedural</li>
@@ -287,12 +292,16 @@
 
               <details style="margin-bottom: 20px;">
                 <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #9ae6b4; padding: 6px;">Josh Gottheimer – <em>Suburban Technocrat</em></summary>
-                <ul>
+                <ul style="text-align: center">
                   <li>🏛️ Federal experience (Congressman, “Problem Solver Caucus”)</li>
+                  <br>
                   <li>💼 Governance Style: Incrementalist with fiscal focus</li>
+                  <br>
                   <li>🗣️ Tone: Moderate, centrist talking points</li>
                   <br>
+                  <br>
                   <li>🎯 Appeals to voters who want affordability without major disruption</li>
+                  <br>
                   <li><a href="Candidates/gottheimer.html">More about Josh Gottheimer →</a></li>
                 </ul>
               </details>
@@ -303,12 +312,16 @@
 
               <details style="margin-bottom: 20px;">
                 <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #9ae6b4; padding: 6px;">Mikie Sherrill – <em>Disciplined Operator</em></summary>
-                <ul>
+                <ul style="text-align: center">
                   <li>🇺🇸 Former Navy pilot and Assistant U.S. Attorney; current Congresswoman</li>
+                  <br>
                   <li>⚖️ Governance Style: Federalist, procedural, institution-trusting</li>
+                  <br>
                   <li>🗣️ Tone: Polished, cautious</li>
                   <br>
+                  <br>
                   <li>🎯 Suits voters seeking stable leadership with national-level credibility</li>
+                  <br>
                   <li><a href="Candidates/sherrill.html">More about Mikie Sherrill →</a></li>
                 </ul>
               </details>
@@ -319,12 +332,16 @@
 
               <details style="margin-bottom: 20px;">
                 <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #f6ad55; padding: 6px;">Sean Spiller – <em>Union-Focused Populist</em></summary>
-                <ul>
+                <ul style="text-align: center">
                   <li>🏫 NJEA President and former Montclair Mayor</li>
+                  <br>
                   <li>🛠️ Governance Style: Public-sector progressive, union-first policymaker</li>
+                  <br>
                   <li>🗣️ Tone: Passionate, activist-leaning</li>
                   <br>
+                  <br>
                   <li>🎯 Appeals to voters who want stronger labor influence without tearing down institutions</li>
+                  <br>
                   <li><a href="Candidates/spiller.html">More about Sean Spiller →</a></li>
                 </ul>
               </details>
@@ -335,12 +352,16 @@
 
               <details style="margin-bottom: 20px;">
                 <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #f56565; padding: 6px;">Steve Fulop – <em>Policy-Focused Reformer</em></summary>
-                <ul>
+                <ul style="text-align: center">
                   <li>🏙️ Jersey City Mayor, former Marine and Goldman Sachs employee</li>
+                  <br>
                   <li>🔨 Governance Style: Bold reformer with detailed platform</li>
+                  <br>
                   <li>🗣️ Tone: Confrontational, issue-driven</li>
                   <br>
+                  <br>
                   <li>🎯 Ideal for voters who want major structural reform grounded in administrative experience</li>
+                  <br>
                   <li><a href="Candidates/fulop.html">More about Steve Fulop →</a></li>
                 </ul>
               </details>
@@ -351,12 +372,16 @@
 
               <details style="margin-bottom: 20px;">
                 <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 6px;">Ras Baraka – <em>Radical Equity Advocate</em></summary>
-                <ul>
+                <ul style="text-align: center">
                   <li>🏙️ Newark Mayor with a transformative local record</li>
+                  <br>
                   <li>🧱 Governance Style: Structural reform rooted in racial equity and public ownership</li>
+                  <br>
                   <li>🗣️ Tone: High-activist, movement-aligned</li>
                   <br>
+                  <br>
                   <li>🎯 Resonates with voters who believe New Jersey needs fundamental change and redistribution</li>
+                  <br>
                   <li><a href="Candidates/baraka.html">More about Ras Baraka →</a></li>
                 </ul>
               </details>
@@ -381,12 +406,16 @@
                   <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #276749; color: white; padding: 6px;">
                     Jon Bramnick – <em>Moderate Institutional Conservative</em>
                   </summary>
-                  <ul>
+                  <ul style="text-align: center">
                     <li>⚖️ Veteran legislator, former Assembly GOP Leader, and current State Senator</li>
+                    <br>
                     <li>⚙️ Governance Style: Procedural, compromise-oriented, pro-rule-of-law</li>
+                    <br>
                     <li>🗣️ Tone: Calm, rational, occasionally prosecutorial</li>
                     <br>
+                    <br>
                     <li>🎯 Appeals to voters seeking GOP leadership without bombast—fiscally conservative, socially measured, and governance-focused</li>
+                    <br>
                     <li><a href="Candidates/bramnick.html">More about Jon Bramnick →</a></li>
                   </ul>
                 </details>
@@ -399,12 +428,16 @@
                   <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #276749; color: white; padding: 6px;">
                     Jack Ciattarelli – <em>Institutional Conservative</em>
                   </summary>
-                  <ul>
+                  <ul style="text-align: center">
                     <li>🏛️ Former Assemblyman and 2021 GOP gubernatorial nominee</li>
+                    <br>
                     <li>⚖️ Governance Style: Center-right, pro-business, state-level incrementalism</li>
+                    <br>
                     <li>🗣️ Tone: Calm, policy-oriented, occasionally combative on cultural flashpoints</li>
                     <br>
+                    <br>
                     <li>🎯 Appeals to Republican voters who want competence, lower taxes, and traditional GOP governance without Trump-style disruption</li>
+                    <br>
                     <li><a href="Candidates/ciattarelli.html">More about Jack Ciattarelli →</a></li>
                   </ul>
                 </details>
@@ -418,12 +451,16 @@
                   <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #f56565; color: white; padding: 6px;">
                     Bill Spadea – <em>Disruptive Conservative Executive</em>
                   </summary>
-                  <ul>
+                  <ul style="text-align: center">
                     <li>📻 NJ101.5 radio host with strong grassroots and statewide reach</li>
+                    <br>
                     <li>⚡ Governance Style: Executive-driven, reformist, and anti-establishment</li>
+                    <br>
                     <li>🗣️ Tone: Confrontational, populist, anti-elite</li>
                     <br>
+                    <br>
                     <li>🎯 Appeals to voters seeking aggressive reform, strong parental rights, and a cultural reset of NJ government</li>
+                    <br>
                     <li><a href="Candidates/spadea.html">More about Bill Spadea →</a></li>
                   </ul>
                 </details>
@@ -437,12 +474,16 @@
                     <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 6px;">
                     Justin Barbera – <em>Anti-Establishment Patriot</em>
                     </summary>
-                    <ul>
+                    <ul style="text-align: center">
                         <li>🔧 Contractor and small business owner with no prior political office</li>
+                        <br>
                         <li>🚫 Governance Style: Anti-institutional, populist, religious-nationalist framing</li>
+                        <br>
                         <li>🗣️ Tone: Raw, faith-driven, defiant toward political elites</li>
                         <br>
+                        <br>
                         <li>🎯 Resonates with voters seeking moral revival, outsider courage, and total system overhaul rooted in Christian and constitutional values</li>
+                        <br>
                         <li><a href="Candidates/barbera.html" style="color: red;">More about Justin Barbera →</a></li>
                     </ul>
                 </details>
@@ -455,12 +496,16 @@
                   <summary style="text-align: center; font-weight: bold; cursor: pointer; background-color: #c53030; color: white; padding: 6px;">
                     Mario Kranjac – <em>America First Enforcer</em>
                   </summary>
-                  <ul>
+                  <ul style="text-align: center">
                     <li>🏛️ Former Englewood Cliffs Mayor, venture capitalist, and attorney</li>
+                    <br>
                     <li>🛠️ Governance Style: Trump-aligned, outsider-driven, hyper-local control</li>
+                    <br>
                     <li>🗣️ Tone: Confrontational, unapologetic, populist</li>
                     <br>
+                    <br>
                     <li>🎯 Appeals to voters who want sweeping change rooted in Trumpism and community autonomy</li>
+                    <br>
                     <li><a href="Candidates/kranjac.html">More about Mario Kranjac →</a></li>
                   </ul>
                 </details>
