--- a/child_pages/cc-elections/county_commissioners_transparency_chart.html
+++ b/child_pages/cc-elections/county_commissioners_transparency_chart.html
@@ -199,7 +199,7 @@
           <p>
             On the Democratic side, the three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are in various stages of visibility. Capizola and Balicki initially agreed to 
             complete a questionnaire and participate in an interview, but have yet to follow through. Smith, on the other hand, has released a platform, presented her agenda, and 
-            confirmed an interview for Monday. Her trajectory shows meaningful progress, even as she remains unaffiliated with the local party’s limited digital infrastructure.
+            completed a campaign interview. Her trajectory shows meaningful progress, even as she remains unaffiliated with the local party’s limited digital infrastructure.
           </p>
           <br>
           <br>
@@ -261,8 +261,8 @@
           <div class="candidate-card">
             <h3>LaRae Smith</h3>
             <span class="label">Public Platform:</span><span class="value">✅ Released updated agenda and background</span>
-            <span class="label">Response to Outreach:</span><span class="value">✅ Confirmed interview for Monday</span>
-            <span class="label">Voter Info Participation:</span><span class="value">✅ Platform received, interview scheduled</span>
+            <span class="label">Response to Outreach:</span><span class="value">✅ Conpleted Campaign Interview</span>
+            <span class="label">Voter Info Participation:</span><span class="value">✅ Platform published, interview published</span>
             <span class="label">Public Appearances:</span><span class="value">⚠️ No events advertised, impacted by lack of party infrastructure</span>
             <span class="label">Local Issue Messaging:</span><span class="value">✅ Documented through platform submission</span>
             <div class="rating">Rating: <strong>Moderate and improving</strong></div>
