governors race coverage explanation

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -190,7 +190,7 @@
          <img class="cover" src="../../../assets/candidates/smith.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
 
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
 
                 <a href="https://perellaandsmithforcumberland.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">PRIOR Campaign Site</button></a>
