--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -165,7 +165,9 @@
         <details>
             <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
             The governor's race this year is highly anticipated and has lots of competitors. To be clear, we should not be any sort of authoritative source on this race.  
-            Rather, we are going to consolidate and present the info as best as we can, but ultimately it will be up to you to sift through all the information.
+            Rather, we are going to consolidate and present the info as best as we can... and in the weeks leading up to the election date, June 10th, we are going to analyze 
+            the data from the perspective of an average Cumberland County voter. In other words, we are going to look for specifics that relate to us, like "Did this candidate 
+            even campaign in or near Cumberland County? Did they mention issues that directly relate to us? How would electing this specific individual help us?"
 
             <br><br>
 
